# student-app

./: README.md  pyproject.toml
student_app/: main.py
student_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
