[project]
name = "student-app"
version = "0.1.0"
description = "Combine students with rooms and export in JSON or XML format"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "dicttoxml"
]

[project.scripts]
merge-rooms = "student_app.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"